--- a/src/components/ui/Wallpaper/styles.scss
+++ b/src/components/ui/Wallpaper/styles.scss
@@ -1,11 +1,17 @@
 @use "assets/stylesheets/consumables" as *;
 
 .wallpaper {
-  background-image: url("../../../assets/images/ui/wallpaper_tile.png");
+  background-image: url("./wallpaper_tile.png");
   background-position: top center;
   background-repeat: repeat;
-  background-size: 300px 400px;
   opacity: 1;
 
   @include fit();
+  @include fluid-property(
+    $breaks-md,
+    $breaks-xl,
+    (150px 200px),
+    (300px 400px),
+    background-size
+  );
 }
